# sg

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.example.json  pyproject.toml
.claude/: CLAUDE.md
docs/: ROADMAP.md  code-review-report.md  code-review.md  config-design-v2.md  config-migration-comparison.md  logging-review.md  mcp-integration.md  modules.md  product-blueprint.md  quickstart.md  refactor-plan.md  research-multi-provider-gateway-2026-03-23.md  search-capability-matrix.md  technical-design.md  test-cases.md  test-report-final.md  test-report.md  testing.md  user-guide.md  user-stories.md  ux-improvement-plan.md  v4-config-implementation.md
docs/providers/: README.md  brave.md  duckduckgo.md  exa.md  firecrawl.md  jina.md  searxng.md  tavily.md  xcrawl.md  youcom.md
prompts/: setup.md
scripts/: dev-install.sh  quick-update.sh
src/sg/: __init__.py  __main__.py  _entry.py  _logging.py  _utils.py  cli.py
src/sg/core/: __init__.py  circuit_breaker.py  executor.py  history.py  load_balancer.py  router.py
src/sg/models/: __init__.py  config.py  search.py
src/sg/providers/: __init__.py  base.py  brave.py  duckduckgo.py  exa.py  firecrawl.py  jina.py  registry.py  searxng.py  serper.py  tavily.py  xcrawl.py  youcom.py
src/sg/sdk/: __init__.py  client.py
src/sg/server/: __init__.py  gateway.py  http_server.py  mcp_server.py
tests/: conftest.py  test_circuit_breaker.py  test_config.py  test_duckduckgo.py  test_executor.py  test_gateway.py  test_history.py  test_http_server.py  test_load_balancer.py  test_providers_new.py  test_registry.py  test_router.py  test_sdk.py
web/: index.html
